@@ -1,3 +1,9 @@
+2012-12-05 Romain Francois <romain@r-enthusiasts.com>
+
+        * src/cache.cpp: added get_cache
+        * include/Rcpp/hash/IndexHash.h: use a cached integer vector for
+        the hash table payload. The cache vector increases as needed. 
+        
 2012-12-05  JJ Allaire <jj@rstudio.org>
 
         * src/Attributes.cpp: use code generation for compileAttributes
